--- a/Dolgozat0203/Dolgozat0203/Dolgozat0203.csproj
+++ b/Dolgozat0203/Dolgozat0203/Dolgozat0203.csproj
@@ -9,6 +9,36 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\kek.png" />
+    <None Remove="Images\lilla.png" />
+    <None Remove="Images\piros.png" />
+    <None Remove="Images\sarga.png" />
+    <None Remove="Images\voros.png" />
+    <None Remove="Images\zold.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\kek.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\lilla.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\piros.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\sarga.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\voros.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\zold.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="meresek.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
