--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /.vs
 /Dolgozat0203/.vs
 /FileOpenSaveApplicationWPF/.vs/FileOpenSaveApplicationWPF
+/FileOpenSaveApplicationWPF/.vs/ProjectEvaluation
