--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Dolgozat0203/.vs
 /FileOpenSaveApplicationWPF/.vs/FileOpenSaveApplicationWPF
 /FileOpenSaveApplicationWPF/.vs/ProjectEvaluation
+/IrodalomProjekt/.vs
