--- a/IrodalomProjekt/IrodalomProjekt/IrodalomProjekt.csproj
+++ b/IrodalomProjekt/IrodalomProjekt/IrodalomProjekt.csproj
@@ -8,4 +8,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="TestTexts\TextFile1.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="TestTexts\TextFile1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
